feature: JVM relearning